--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "auth0-react-sample",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8000",
   "scripts": {
     "start": "npm-run-all --parallel spa api-server",
     "build": "react-scripts build",
