--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^5.3",
     "react-scripts": "^5.0",
     "reactstrap": "^9.2",
+    "rsuite": "^5.46.0",
     "three": "^0.158.0",
     "typescript": "^4.9"
   },
@@ -53,7 +54,8 @@
     "@testing-library/react": "^14.1",
     "jest-environment-jsdom": "^27.0",
     "jest-fetch-mock": "^3.0",
-    "nodemon": "^2.0"
+    "nodemon": "^2.0",
+    "tailwindcss": "^3.3.5"
   },
   "eslintConfig": {
     "extends": "react-app"
