added alert functionality, fixed booking system, also added manage bookings

--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@babel/core": "^7.23",
     "@babel/plugin-syntax-flow": "^7.23",
     "@babel/plugin-transform-react-jsx": "^7.22",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^1.2",
     "@fortawesome/free-solid-svg-icons": "^5.8",
     "@fortawesome/react-fontawesome": "^0.2",
+    "@mui/material": "^5.15.1",
     "@syncfusion/ej2-react-grids": "^23.1.44",
     "@syncfusion/ej2-react-schedule": "^23.1.44",
     "animate.css": "^4.1.1",
@@ -42,7 +45,7 @@
     "react-calendly": "^4.3.0",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^5.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0",
     "reactstrap": "^9.2",
     "rsuite": "^5.46.0",
